--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,48 @@
-<h1>Welcome</h1>
+<div class="container">
+  <h1>Welcome</h1>
+
+  <div class="media">
+    <div class="media-left">
+      <a href="#">
+        <%= image_tag "mickey.jpg", size: "64x44", alt: "user"%>
+      </a>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">user@world.com has answered...</h4>
+      Lorem ipsum dolor sit amet, ius te assum scripta. Et purto definiebas vituperata cum, adhuc vulputate definitionem sea ea, ex per ornatus consulatu. Commodo admodum principes qui eu. At nec fugit efficiantur.
+      <div>
+        <a href="/questions/12" class="btn btn-success btn-xs">View Answers</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="media">
+    <div class="media-left">
+      <a href="#">
+        <%= image_tag "mickey.jpg", size: "64x44", alt: "user"%>
+      </a>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">user@world.com has answered...</h4>
+      Lorem ipsum dolor sit amet, ius te assum scripta. Et purto definiebas vituperata cum, adhuc vulputate definitionem sea ea, ex per ornatus consulatu. Commodo admodum principes qui eu. At nec fugit efficiantur.
+      <div>
+        <a href="/questions/12" class="btn btn-success btn-xs">View Answers</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="media">
+    <div class="media-left">
+      <a href="#">
+        <%= image_tag "mickey.jpg", size: "64x44", alt: "user"%>
+      </a>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">user@world.com has answered...</h4>
+      Lorem ipsum dolor sit amet, ius te assum scripta. Et purto definiebas vituperata cum, adhuc vulputate definitionem sea ea, ex per ornatus consulatu. Commodo admodum principes qui eu. At nec fugit efficiantur.
+      <div>
+        <a href="/questions/12" class="btn btn-success btn-xs">View Answers</a>
+      </div>
+    </div>
+  </div>
+</div>
