--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,12 +3,12 @@
     <div class="media">
       <div class="media-left">
         <a href="#">
-          <img class="media-object" src="<%= q.gravatar %>">
+          <%= image_tag "mickey.jpg", size: "64x44", alt: "user"%>
         </a>
       </div>
       <div class="media-body">
         <h4 class="media-heading"><%= q.email %> has asked...</h4>
-          <%= time_ago_in_words q.created_at %> ago<br />
+          <%= q.created_at %>
           <%= q.body %>
         <div>
           <a href="/questions/12" class="btn btn-success btn-xs">View Answers</a>
