--- a/app/views/layouts/_new_answer.html.erb
+++ b/app/views/layouts/_new_answer.html.erb
@@ -1,23 +1,23 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="new-answer-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Ask a question</h4>
+        <h4 class="modal-title">New answer</h4>
       </div>
       <div class="modal-body">
-        <%= form_for :question, url: '/questions', html: { class: 'form-horizontal' } do %>
+        <%= form_for :answer, url: '/answers', html: { class: 'form-horizontal' } do %>
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="email" name="question[email]" class="form-control" id="inputEmail3" placeholder="Email" required>
+              <input type="email" name="answer[email]" class="form-control" id="inputEmail3" placeholder="Email" required>
             </div>
           </div>
           <div class="form-group">
-            <label for="inputQuestion" class="col-sm-2 control-label">Question</label>
+            <label for="inputAnswer" class="col-sm-2 control-label">Answer</label>
             <div class="col-sm-10">
-              <textarea class="form-control" name="question[body]" id="inputQuestion" placeholder="What would you like to ask?" required></textarea>
+              <textarea class="form-control" name="answer[body]" id="inputAnswer" placeholder="What is your answer?" required></textarea>
             </div>
           </div>
           <div class="modal-footer">
