--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,7 +31,7 @@
             </div>
           <div class="media-body">
             <h4 class="media-heading"><%= answer.email %> has answered...</h4>
-            <%= @answer.body %>
+            <%= answer.body %>
           </div>
         </div>
       <% end %>
