--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 <body>
   <div>
     <%= render 'home/navbar' %>
+
+    <div class="well"><%= current_user_email %></div>
+
     <%= yield %>
     <%= render 'home/new_question' %>
   </div>
