--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,7 +22,7 @@
 
       <%= render 'home/new_answer' %>
 
-        <%= @question.answers do |answer| %>
+        <% @answers.each do |answer| %>
           <div class="media">
             <div class="media-left">
               <a href="#">
@@ -31,10 +31,16 @@
             </div>
           <div class="media-body">
             <h4 class="media-heading"><%= answer.email %> has answered...</h4>
+            <div><%= time_ago_in_words answer.created_at %> ago</div>
             <%= answer.body %>
           </div>
         </div>
       <% end %>
+
+      <% if @answers.empty? %>
+        <div class="alert alert-info">No answers yet, be the first one?</div>
+      <% end %>
+
     </div>
   </div>
 </div>
