--- a/app/views/home/_new_answer.html.erb
+++ b/app/views/home/_new_answer.html.erb
@@ -12,7 +12,7 @@
           <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-              <input type="email" name="answer[email]" class="form-control" id="inputEmail3" placeholder="Email" required>
+              <input type="email" name="answer[email]" value=<%= current_user_email %> class="form-control" id="inputEmail3" placeholder="Email" required>
             </div>
           </div>
           <div class="form-group">
@@ -23,7 +23,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         <% end %>
       </div>
