--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.boxes {
+  .media {
+    border: thin solid #ddd;
+    padding: 1em;
+    border-radius: 8px;
+    background-color: #eee;
+    position: relative;
+    .time {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+    }
+    a.btn {
+      position: absolute;
+      bottom: 8px;
+      right: 8px;
+    }
+    &:hover {
+      cursor: pointer;
+      background-color: #ddd;
+    }
+  }
+}
+
+
