--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,25 @@
 <div class="container">
-  <% @questions.each do |q| %>
-    <div class="media">
-      <div class="media-left">
-        <a href="#">
-          <img class="media-object" src="<%= q.gravatar %>">
-        </a>
-      </div>
-      <div class="media-body">
-        <h4 class="media-heading"><%= q.email %> has asked...</h4>
-          <%= time_ago_in_words q.created_at %> ago<br />
-          <%= q.body %>
-        <div>
-          <a href="<%= question_path(q) %>" class="btn btn-success btn-xs">View Answers</a>
+  <div class="boxes">
+    <% @questions.each do |q| %>
+      <div class="media">
+        <div class="media-left">
+          <a href="#">
+            <img class="media-object" src="<%= q.gravatar %>">
+          </a>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"><%= q.email %> has asked...</h4>
+            <div class="time">
+              <%= time_ago_in_words q.created_at %> ago<br />
+            </div>
+            <%= q.body %>
+          <div>
+            <a href="<%= question_path(q) %>" class="btn btn-success btn-xs">View Answers</a>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
-
+    <% end %>
+  </div>
   <% if @questions.empty? %>
     <div class="alert alert-info">Nothing here yet, be the first to ask?</div>
   <% end %>
